package ch.fhnw.dream.data.domain;

public enum Visibility {
    PUBLIC,
    PRIVATE
}
