@startuml
title DayDream Domain Class Diagram

hide empty members
skinparam classAttributeIconSize 0

package "ch.fhnw.dream.data.domain" {

    class User {
        - id: Long
        - username: String
        - email: String
        - passwordHash: String
        - createdAt: LocalDateTime
        - daydreams: List<Daydream>
    }

    class Daydream {
        - id: Long
        - user: User
        - title: String
        - description: String
        - mood: String
        - visibility: Visibility
        - createdAt: LocalDateTime
        - updatedAt: LocalDateTime
        - comments: List<Comment>
        - tags: List<Tag>
    }

    class Comment {
        - id: Long
        - daydream: Daydream
        - authorUsername: String
        - content: String
        - createdAt: LocalDateTime
    }

    class Tag {
        - id: Long
        - daydream: Daydream
        - name: String
    }

    enum Visibility {
        PUBLIC
        PRIVATE
    }
}

User "1" <-- "0..*" Daydream : user
Daydream "1" <-- "0..*" Comment : daydream
Daydream "1" <-- "0..*" Tag : daydreamy
Daydream --> Visibility

@enduml